[package]
name = "nfq"
version = "0.2.3"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust library for dealing with NetFilter queue"
keywords = ["netfilter", "nfqueue", "iptables"]
homepage = "https://github.com/nbdd0121/nfq-rs"
repository = "https://github.com/nbdd0121/nfq-rs.git"

[dependencies]
libc = "0.2"
tokio = {version="0.2", default-features = false, features = ["io-driver"]}
futures = "0.3"
mio = "0.6"

[dev-dependencies]
tokio = {version="0.2", default-features = false, features = ["io-driver", "macros"]}

[features]
ct = []
